--- a/assets/sass/_members.scss
+++ b/assets/sass/_members.scss
@@ -63,7 +63,8 @@
 
 .member-subheaders {
     text-align: center;
-    margin-bottom: 5%;
+    margin-bottom: 3%;
+    margin-top: 3%;
 }
 
 .btn {
