--- a/assets/sass/_officers.scss
+++ b/assets/sass/_officers.scss
@@ -4,7 +4,7 @@
         margin-bottom: 5%;
     }
 
-    padding: 0 10%;
+    padding: 0 20%;
 }
 
 .officerPicture {
@@ -12,9 +12,6 @@
   height: auto;
 }
 
-#meetOfficers {
-  padding-top: 5%;
-}
 
 .officer-box {
     border: 0;
