--- a/assets/sass/_sponsors.scss
+++ b/assets/sass/_sponsors.scss
@@ -1,6 +1,6 @@
 #sponsors {
     display: block;
-    padding: 10%;
+    padding: 5% 20%;
     color: $maroon;
 
     h1 {
